--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,22 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="country_names">
+        <item>
+            India
+        </item>
+        <item>
+            Amerika
+        </item>
+        <item>
+            Rusia
+        </item>
+        <item>
+            Brazil
+        </item>
+        <item>
+            Japan
+        </item>
+    </string-array>
 
 </resources>
